--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "5.3.0",
-        "react-router-dom": "6.27.0"
+        "react-router-dom": "6.27.0",
+        "react-spinners": "0.14.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.25.0",
